# enu.wasmsdk

./: .gitignore  .gitmodules  CMakeLists.txt  ClangExternalProject.txt  Doxyfile  InstallClang.txt  LICENSE  README.md  ToolsExternalProject.txt  build.sh  enumivo.imports.in  install.sh  uninstall.sh
docs/guides/: basic-usage.md  cmake.md  native-tester.md  upgrading-from-1.2-to-1.3.md
examples/abigen_test/: CMakeLists.txt  abitest.cpp  test.cpp
examples/exchange/: CMakeLists.txt  exchange.cpp  exchange.hpp  exchange_accounts.hpp  exchange_state.hpp  market_state.hpp
examples/hello/: CMakeLists.txt  hello.abi  hello.clauses.md  hello.cpp  hello.hpp
examples/hello/include/: hello.hpp
examples/hello/src/: CMakeLists.txt  hello.cpp
examples/hello/tests/: hello_test.cpp
examples/multi_index_example/: CMakeLists.txt  README.txt  multi_index_example.cpp
examples/multi_index_example/include/: multi_index_example.hpp
examples/multi_index_example/src/: CMakeLists.txt  multi_index_example.cpp
examples/send_inline/: CMakeLists.txt  README.txt  send_inline.cpp
examples/send_inline/include/: send_inline.hpp
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
examples/template/: CMakeLists.txt
imports/: enumivo.imports.in
libraries/: CMakeLists.txt
libraries/enulib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  compiler_builtins.h  contract.hpp  core_symbol.hpp  core_symbol.hpp.in  crypto.cpp  crypto.h  crypto.hpp  currency.hpp  datastream.hpp  db.h  dispatcher.hpp  enu.hpp  enulib.cpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  ignore.hpp  mainpage.md  memory.h  memory.hpp  multi_index.hpp  name.hpp  optional.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.hpp  producer_schedule.hpp  public_key.hpp  reflect.hpp  rpc.dox  serialize.hpp  singleton.hpp  (+10 more)
libraries/enumivolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  enulib.cpp  enumivo.hpp  enumivolib.cpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  ignore.hpp  malloc.cpp  memory.hpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  simple_malloc.cpp  singleton.hpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  (+3 more)
libraries/enumivolib/capi/enumivo/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/enumivolib/contracts/enumivo/: action.hpp  contract.hpp  dispatcher.hpp  enumivo.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  system.hpp  transaction.hpp
libraries/enumivolib/core/enumivo/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  print.hpp  rope.hpp  serialize.hpp  symbol.hpp  time.hpp  varint.hpp
libraries/eosiolib/: eosio.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/enumivo/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
modules/: ClangExternalProject.txt  EnuLibConfig.cmake.in  EnuWasmToolchain.cmake  EnuWasmToolchain.cmake.in  EnuWasmToolchainBuild.cmake  EnuWasmToolchainBuild.cmake.in  EnumivoCDTMacros.cmake.in  EnumivoLibConfig.cmake.in  EnumivoWasmToolchain.cmake  EnumivoWasmToolchain.cmake.in  EnumivoWasmToolchainBuild.cmake  EnumivoWasmToolchainBuild.cmake.in  EosioLibConfig.cmake.in  EosioWasmToolchain.cmake  EosioWasmToolchain.cmake.in  EosioWasmToolchainBuild.cmake  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  enumivo.cdt-config.cmake
scripts/: enumivo_build_amazon.sh  enumivo_build_centos.sh  enumivo_build_darwin.sh  enumivo_build_fedora.sh  enumivo_build_ubuntu.sh  eosio_build_amazon.sh  eosio_build_darwin.sh  eosio_build_fedora.sh  eosio_build_ubuntu.sh  generate_bottle.sh  generate_tarball.sh
scripts/ricardenu/: README.md  ricardenu.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tests/unit/test_contracts/: malloc_tests.cpp  simple_tests.cpp  simple_wrong.abi  transfer.cpp  transfer.hpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  enumivo-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  enumivo-abigen.cpp.in
tools/cc/: CMakeLists.txt  enumivo-cc.cpp.in  enumivo-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/include/enumivo/: abi.hpp  abigen.hpp  codegen.hpp  gen.hpp  utils.hpp
tools/include/enumivo/whereami/: whereami.hpp
tools/init/: CMakeLists.txt  enumivo-init.cpp  eosio-init.cpp
tools/ld/: CMakeLists.txt  enumivo-ld.cpp.in
